Fix Menu & Tools Popover Height issue : https://wordpress.org/support/topic/pop-up-for-tools-options-off-screen/

--- a/src/styles/editor.scss
+++ b/src/styles/editor.scss
@@ -155,6 +155,20 @@
 }
 
 /*--------------------------------------------------------------
+# Menu Options Popover
+--------------------------------------------------------------*/
+.components-popover {
+
+	&.edit-post-more-menu__content {
+
+		> .components-popover__content {
+			max-height: calc(100vh - 100px);
+			overflow: scroll;
+		}
+	}
+}
+
+/*--------------------------------------------------------------
 # Chrome version 77 bug fixes
 --------------------------------------------------------------*/
 .block-editor-writing-flow {
